# supply_chain_delay_predictor

./: .env.example  .env.production  .gitignore  .replit  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  Dockerfile  FILE_INDEX.md  HACKATHON_JUDGE_AUDIT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_READY.md  PROJECT_PREVIEW.md  PROJECT_STATUS.md  QUICKSTART_DEPLOY.md  QUICK_START.md  README.md  WINNING_SUMMARY.md  app.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  explainer.py  feature_insights.py  health_check.sh  init.py  main.py  pyproject.toml  recommendation_service.py  requirements.txt  run.py  setup.sh  start.ps1  test_training.py
.github/workflows/: ci.yml  deploy.yml  tests.yml
.streamlit/: config.toml
attached_assets/: Pasted-Act-as-a-Principal-AI-Engineer-Senior-MLOps-Architect-a_1778855453018.txt  Pasted-Act-as-a-world-class-AI-Architect-MLOps-Engineer-Full-S_1778854717867.txt
backend/: config.py  logging_config.py  main.py
backend/services/: ai_chat_service.py  anomaly_service.py  cost_benefit_engine.py  logistics_intelligence.py  (+4 more)
configs/: alert_rules.yml  default.yaml
dashboard/: streamlit_app.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HACKATHON_PPT.md  IEEE_HACKATHON_WINNING_PACK.md  IEEE_PAPER.md  RESUME_CONTENT.md  SETUP.md
frontend/: main.py
ml_pipeline/: __init__.py
scripts/: download_and_train.py  evaluate.py  log_prediction.py  monitor_drift.py  predict.py  train.py
tests/: conftest.py
(+45 files in other folders)
