[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-supply-chain-delay-predictor"
version = "0.1.0"
description = "End-to-end MLOps pipeline and GenAI explanation system for supply chain delay prediction."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "SURFACE Team", email = "team@example.com" }
]
dependencies = [
  "pandas==2.0.3",
  "numpy==1.24.3",
  "scikit-learn==1.3.0",
  "xgboost==2.0.0",
  "fastapi==0.104.0",
  "uvicorn==0.23.2",
  "pydantic==2.3.0",
  "python-dotenv==1.0.0",
  "streamlit==1.28.0",
  "plotly==5.17.0",
  "requests==2.31.0",
  "joblib==1.3.2",
  "pyyaml==6.0.1"
]

[project.urls]
"Homepage" = "https://github.com/"
"Documentation" = "https://github.com/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*", "backend*", "frontend*"]
